Native compilation of jide_demo done: compilation fails